--- a/tox.ini
+++ b/tox.ini
@@ -55,7 +55,7 @@ commands =
     codespell {toxinidir} --skip {toxinidir}/.git --skip {toxinidir}/.tox \
       --skip {toxinidir}/build --skip {toxinidir}/lib \
       --skip {toxinidir}/.mypy_cache --skip {toxinidir}/icon.svg \
-      --skip {[vars]cov_path} \
+      --skip {[vars]cov_path} --skip {toxinidir}/env \
       --skip "*.yaml"
     # pflake8 wrapper supports config from pyproject.toml
     pflake8 {[vars]all_path}
