--- a/.github/workflows/charm-build.yaml
+++ b/.github/workflows/charm-build.yaml
@@ -42,8 +42,7 @@ jobs:
       - name: Upload charm artifact
         uses: actions/upload-artifact@v4
         with:
-          name: openstack-integrator.charm
-          path: ./openstack-integrator*.charm
+          path: ./*.charm
       - name: Upload debug artifacts
         if: ${{ failure() }}
         uses: actions/upload-artifact@v4
