--- a/tox.ini
+++ b/tox.ini
@@ -66,6 +66,7 @@ commands =
 [testenv:unit]
 description = Run unit tests
 deps =
+    pytest-sugar
     pytest-cov
     ipdb
     -r{toxinidir}/requirements.txt
