Pivot to jmodelproxylib for proxy config

--- a/tox.ini
+++ b/tox.ini
@@ -102,5 +102,8 @@ ignore_missing_imports = True
 [mypy-lightkube.*]
 ignore_missing_imports = True
 
+[mypy-jmodelproxylib.*]
+ignore_missing_imports = True
+
 [isort]
 profile = black
