--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-lightkube
-ops
+lightkube==0.17.2
+ops==2.22.0
 ops.manifest>=1.1.0,<2.0.0
 pydantic==1.*
-ops.interface-kube_control == 0.2.0
+ops.interface-kube_control==0.2.0
 ops.interface-tls-certificates @ git+https://github.com/charmed-kubernetes/interface-tls-certificates.git@4a1081da098154b96337a09c8e9c40acff2d330e#subdirectory=ops
 ops.interface_openstack_integration @ git+https://github.com/charmed-kubernetes/interface-openstack-integration.git@cf4383999b0920b226104299f4defb3576680d72#subdirectory=ops
 jmodelproxylib @ git+https://github.com/addyess/jmodelproxylib@main
