Update to approved ux web-proxy-enable

--- a/tox.ini
+++ b/tox.ini
@@ -102,7 +102,7 @@ ignore_missing_imports = True
 [mypy-lightkube.*]
 ignore_missing_imports = True
 
-[mypy-jmodelproxylib.*]
+[mypy-charms.*]
 ignore_missing_imports = True
 
 [isort]
